# Approx

./: .gitignore  CKKS_params.cpp  CMakeLists.txt  README.md  evaluate.cpp  main.cpp  measure_time.cpp  parse.cpp  parse.py  tbench.cpp
header/: CKKS_params.h  error_bound.h  evaluate.h  main.h  measure_time.h  parse.h  tbench.h
py_approx_test/: cal_depth.py  main.py  main_err.py  parse.py  time.py
py_approx_test/src_approx/: approx_helut.py  approx_remez.py  approx_remez_MT.py  approx_sgn.py  file_MT.py  util_MT.py
py_approx_test/src_errbound/: error_bound.py
py_approx_test/src_remez/: algorithm.py  basic.py  basic_multi.py  print.py  print_plot.py
